--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ kafka.bootstrap.servers=my-cluster-kafka-brokers:9092
 mp.messaging.incoming.txn-kafka.connector=smallrye-kafka
 mp.messaging.incoming.txn-kafka.topic=documents
 mp.messaging.incoming.txn-kafka.group.id=documentgroup
+mp.messaging.incoming.txn-kafka.client.id=documentgroup
 mp.messaging.incoming.txn-kafka.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 mp.messaging.incoming.txn-kafka.auto.offset.reset=earliest
 mp.messaging.incoming.txn-kafka.enable.auto.commit=false
